<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/loginph"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:background="@drawable/googleshape"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/signup_page"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:text="@string/fullname_text"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:gravity="bottom"
                    android:paddingStart="12dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    />

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3.5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight=".6"
                    android:paddingStart="7dp"
                    tools:ignore="RtlSymmetry">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="7dp"
                        android:maxLines="1"
                        android:textStyle="normal"
                        android:background="@drawable/shapecorner"
                        android:inputType="text"
                        android:textColor="@color/black"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:text="@string/email_text"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:gravity="bottom"
                    android:paddingStart="12dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    />

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3.5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight=".6"
                    android:paddingStart="7dp"
                    tools:ignore="RtlSymmetry">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="7dp"
                        android:maxLines="1"
                        android:textStyle="normal"
                        android:background="@drawable/shapecorner"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:text="@string/pass_text"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:gravity="bottom"
                    android:paddingStart="12dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3.5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight=".6"
                    android:paddingStart="7dp"
                    app:passwordToggleDrawable="@drawable/icon_show_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    tools:ignore="RtlSymmetry">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="7dp"
                        android:maxLines="1"
                        android:textStyle="normal"
                        android:background="@drawable/shapecorner"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_weight="1.8"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1.2"
                android:orientation="vertical"
                android:weightSum="1"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:gravity="center"
                tools:ignore="NestedWeights">

                <ImageButton
                    android:id="@+id/Btn_signup"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:background="@drawable/signinshape"
                    app:srcCompat="@drawable/ic_arrow_signin_black_24dp"
                    android:contentDescription="@string/todo" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1.4">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/or_text"
                    android:textColor="#bebebe"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:drawableStart="@drawable/ic_icons_google"
                    android:background="@drawable/googleshape"
                    android:text="@string/google_text"
                    tools:ignore="ButtonStyle,RtlSymmetry" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAllCaps="false"
                    android:background="@drawable/facebookshape"
                    android:paddingStart="20dp"
                    android:drawableStart="@drawable/ic_icons_facebook_f"
                    android:text="@string/facebook_text"
                    tools:ignore="ButtonStyle,RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="right"
                    android:text="@string/signup_text"
                    android:textColor="#bebebe"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/text_signn_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1.8"
                    android:gravity="left"
                    android:text="@string/sign_in"
                    android:textColor="@color/sinupword"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>